node-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: node-api
  name: node-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/web: "true"
        io.kompose.service: node-api
    spec:
      containers:
        - image: node-api
          name: node-api
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
