react-vite-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: react-vite-app
  name: react-vite-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react-vite-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/web: "true"
        io.kompose.service: react-vite-app
    spec:
      containers:
        - image: react-vite-app
          name: react-vite-app
          ports:
            - containerPort: 5173
          resources: {}
      restartPolicy: Always
status: {}
