react-vite-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: react-vite-app
  name: react-vite-app
spec:
  ports:
    - name: "5173"
      port: 5173
      targetPort: 5173
  selector:
    io.kompose.service: react-vite-app
status:
  loadBalancer: {}
